Landing page and routing

--- a/ng-forms-bootstrap/src/index.html
+++ b/ng-forms-bootstrap/src/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
-<html>
+<html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Forms</title>
-  <base href="/">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>NG Forms</title>
+  <base href="/">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="favicon.ico">
 </head>
+
 <body>
-  <frms-root>Loading...</frms-root>
+  <frms-root>
+    <p>Loading...</p>
+  </frms-root>
 </body>
+
 </html>
